force-app/main/default/objects/Registry__c/Registry__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Registry</label>
</CustomObject>