force-app/main/default/objects/Registry__c/fields/Account_House_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_House_Account__c</fullName>
    <label>Account: House Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>