force-app/main/default/objects/Registry__c/fields/Apex_Scheduled_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Apex_Scheduled_Jobs__c</fullName>
    <label>Apex: Scheduled Jobs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>