force-app/main/default/objects/Registry__c/fields/Case_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_From_Address__c</fullName>
    <label>Case Email - From Address</label>
    <type>Email</type>
</CustomField>