force-app/main/default/objects/Registry__c/fields/Case_Origin_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_Voicemail__c</fullName>
    <label>Case Origin Voicemail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>