force-app/main/default/objects/Registry__c/fields/Cases_Accounting_Queue__c.field-meta.xml
<CustomField>
    <fullName>Cases_Accounting_Queue__c</fullName>
    <label>Cases: Accounting Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>