force-app/main/default/objects/Registry__c/fields/Cases_Closure_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closure_Notes_Required__c</fullName>
    <label>Cases: Closure Notes Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>