force-app/main/default/objects/Registry__c/fields/Cases_Default_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Cases_Default_Entitlement_ID__c</fullName>
    <label>Cases: Default Entitlement ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>