force-app/main/default/objects/Registry__c/fields/Cases_Feedback_Received_Status__c.field-meta.xml
<CustomField>
    <fullName>Cases_Feedback_Received_Status__c</fullName>
    <label>Cases: Feedback Received Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>