force-app/main/default/objects/Registry__c/fields/Cases_Update_When_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>Cases_Update_When_Feedback_Received__c</fullName>
    <label>Cases: Update When Feedback Received</label>
    <length>100</length>
    <type>Text</type>
</CustomField>