force-app/main/default/objects/Registry__c/fields/Contact_Reset_Password_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Reset_Password_Profiles__c</fullName>
    <label>Contact: Reset Password Profiles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>