force-app/main/default/objects/Registry__c/fields/Credit_Card_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processing_Fee__c</fullName>
    <label>Credit Card Processing Fee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>