force-app/main/default/objects/Registry__c/fields/Custom_API_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_API_Profile_Id__c</fullName>
    <label>[Custom] API Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>