force-app/main/default/objects/Registry__c/fields/EFT_File_Count__c.field-meta.xml
<CustomField>
    <fullName>EFT_File_Count__c</fullName>
    <label>EFT File Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>