force-app/main/default/objects/Registry__c/fields/Email_Auto_Response_Email__c.field-meta.xml
<CustomField>
    <fullName>Email_Auto_Response_Email__c</fullName>
    <label>Email: Auto Response Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>