force-app/main/default/objects/Registry__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <label>Email: Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>