force-app/main/default/objects/Registry__c/fields/Email_Regex__c.field-meta.xml
<CustomField>
    <fullName>Email_Regex__c</fullName>
    <label>Email: Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>