force-app/main/default/objects/Registry__c/fields/Email_Registry_CommunityLogin__c.field-meta.xml
<CustomField>
    <fullName>Email_Registry_CommunityLogin__c</fullName>
    <label>Email: /Registry/CommunityLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>