force-app/main/default/objects/Registry__c/fields/Email_RPRA_Logo__c.field-meta.xml
<CustomField>
    <fullName>Email_RPRA_Logo__c</fullName>
    <label>Email: RPRA Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>