force-app/main/default/objects/Registry__c/fields/Knowledge_Article_Feedback_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Feedback_Report_Id__c</fullName>
    <label>Knowledge: Article Feedback Report Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>