force-app/main/default/objects/Registry__c/fields/Memo_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Memo_Product_Code__c</fullName>
    <label>Memo Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>