force-app/main/default/objects/Registry__c/fields/Milestone_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Milestone_First_Response__c</fullName>
    <label>Milestone: First Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>