force-app/main/default/objects/Registry__c/fields/Order_Credit_Card_Fees_Price_Book_Entry__c.field-meta.xml
<CustomField>
    <fullName>Order_Credit_Card_Fees_Price_Book_Entry__c</fullName>
    <label>Order: Credit Card Fees Price Book Entry</label>
    <length>18</length>
    <type>Text</type>
</CustomField>