force-app/main/default/objects/Registry__c/fields/Order_PRO_Price_Book_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_PRO_Price_Book_Entry_ID__c</fullName>
    <label>Order: PRO Price Book Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>