force-app/main/default/objects/Registry__c/fields/Phone_Regex__c.field-meta.xml
<CustomField>
    <fullName>Phone_Regex__c</fullName>
    <label>Phone Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>