force-app/main/default/objects/Registry__c/fields/PRO_Association_Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>PRO_Association_Default_Owner__c</fullName>
    <label>PRO Association: Default Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>