force-app/main/default/objects/Registry__c/fields/System_Administrator_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>System_Administrator_Profile_ID__c</fullName>
    <label>System Administrator Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>