force-app/main/default/objects/Registry__c/fields/Username_Regex__c.field-meta.xml
<CustomField>
    <fullName>Username_Regex__c</fullName>
    <label>Username: Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>