force-app/main/default/objects/Registry__c/fields/Verification_Email_2FA__c.field-meta.xml
<CustomField>
    <fullName>Verification_Email_2FA__c</fullName>
    <label>Verification Email 2FA</label>
    <type>Email</type>
</CustomField>